--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StudentSuper官方下载 - 信技课随时随地上网</title>
+    <title>Zxjy官方下载 - 分享好用的工具</title>
     <style>
         * {
             margin: 0;
@@ -236,10 +236,9 @@
         </header>
         
         <section class="download-section">
-            <h2>立即下载最新版StudentSuper</h2>
             <p>适用于 Windows 系统</p>
-            <a href="#" class="download-btn" id="downloadBtn">立即下载</a>
-            <p class="download-info">版本 10.0.0 | 大小 7487 KB | 更新日期 2025年10月</p>
+            <a href="#" class="download-btn" id="downloadBtn">立即下载StudentSupe(密码47vx)r</a>
+            <p class="download-info">版本 10.0.0 | 大小 7487 KB | 更新日期 2025年11月</p>
             
             <div class="platform-links">
                 <a href="#" class="platform-link">Windows版</a>
@@ -316,3 +315,4 @@
     </script>
 </body>
 </html>
+
